--- a/DockerFile
+++ b/DockerFile
@@ -2,10 +2,10 @@ FROM python:3.12-slim
 
 WORKDIR /app
 
-COPY model.pth
-COPY backend/model.py
-COPY backend/view.py
-COPY requirements.txt
+COPY model.pth /app/
+COPY backend/model.py /app/backend/
+COPY backend/view.py /app/backend/
+COPY requirements.txt /app/
 
 RUN pip install --no-cache-dir -r requirements.txt
 
